SERVER-105688 Resharding recipient retries on lockTimeout errors (#37063)

Co-authored-by: graphite-app[bot] <96075541+graphite-app[bot]@users.noreply.github.com>
GitOrigin-RevId: 1727d38ba9f25bb535feeca832e5caaf6dc937bd